# AutoBWS

./: .gitignore  README.md  cli.py  main.py  paths.py  pyproject.toml  requirements.txt
core/: api.py  grabber.py  lock.py  login.py  notify.py  profiles.py
docs/: bws2026-api.md
net/: http.py  ntp.py  proxy.py  proxycheck.py
utils/: fmt.py
web/: app.py  managers.py  settings.py
web/static/: app.js  index.html  style.css
